# agentic-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 259b9e1d8fc5_add_users_table.py  5e31e0045d8e_add_documents_table.py  8a12c4f4d6b1_add_semantic_cache_entries.py  a1b2c3d4e5f6_add_retrieval_evaluation_tables.py  b4e9d2a1f0c7_add_evaluation_tables.py  c92f3d1a7b4e_add_evaluation_run_config_snapshot.py  d3e4f5a6b7c8_add_keyword_eval_fields.py  e6f7a8b9c0d1_remove_evaluation_tables.py  f0a1b2c3d4e5_add_document_chunking_config.py
output/: sample-privacy-policy-template-eval.jsonl
output/spreadsheet/: rag_privacy_policy_eval.csv  rag_privacy_policy_eval.jsonl  rag_privacy_policy_eval_fixed_window.csv  rag_privacy_policy_eval_recursive_semantic.csv
src/agents/: __init__.py  ask_pipeline.py  cache_policy.py  query_refinement.py  service.py
src/modules/: __init__.py
src/rag/: models.py
src/settings/: __init__.py  agent.py  ai.py  auth.py  config.py  database.py  evaluation.py  rag.py
src/shared/: tracing.py
src/tools/: __init__.py  ping_tool.py  registry.py  retriever_tool.py
static/css/: admin_eval.css
static/js/: admin_eval_common.js  ui_auth.js
templates/: ask_ui.html  document_chunks_ui.html  documents_ui.html  evaluation_base.html  evaluation_compare_ui.html  evaluation_datasets_ui.html  evaluation_history_ui.html  evaluation_new_ui.html  evaluation_run_detail_ui.html  evaluation_run_ui.html  evaluation_runs_ui.html  evaluation_ui.html  login_ui.html
(+90 files in other folders)
