[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "cohere>=5.20.7",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-cohere>=0.5.0",
    "langchain-huggingface>=1.2.1",
    "openai>=2.29.0",
    "pydantic-settings>=2.13.1",
    "sentence-transformers>=5.3.0",
    "uvicorn[standard]>=0.42.0",
]
