[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "cohere>=5.20.7",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-cohere>=0.5.0",
    "langchain-huggingface>=1.2.1",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.13.1",
    "rapidfuzz>=3.14.3",
    "sentence-transformers>=5.3.0",
    "uvicorn[standard]>=0.42.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "python-jose>=3.5.0",
    "aiosqlite>=0.21.0",
    "pgvector>=0.3.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
